--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -12,7 +12,7 @@
         <script type="text/javascript">
 
         var env = {
-        	basePath : '/'
+        	basePath : 'http://localhost:9000/'
     	};
 
     	Ext.Loader.setConfig({
