--- a/app/views/thread.scala.html
+++ b/app/views/thread.scala.html
@@ -1,11 +1,18 @@
 @(comments: List[rovachan.core.Comment])
 
 @import org.apache.commons.io.FilenameUtils
+@import rovachan.controllers.routes._
 
-@for(comment <- comments) {
-    <div>
-        <img src="@rovachan.controllers.routes.Files.img(FilenameUtils.getName(comment.image))" style="float: left">
-        @Html(comment.text)
+<div class="board">
+    <div class="comments">
+        @for(comment <- comments) {
+            <div class="comment">
+                @if(!comment.image.isEmpty) {
+                    <img src="@Files.img(FilenameUtils.getName(comment.image))" style="float: left">
+                }
+                @Html(comment.text)
+            </div>
+            <br>
+        }
     </div>
-    <br>
-}
+</div>
