Update image when it has been downloaded

--- a/app/views/thread.scala.html
+++ b/app/views/thread.scala.html
@@ -12,7 +12,7 @@
                 }
                 @Html(comment.text)
             </div>
-            <br>
+            <div class="clear"></div>
         }
     </div>
 </div>
