--- a/app/views/board.scala.html
+++ b/app/views/board.scala.html
@@ -14,7 +14,7 @@
 
 	    	@for(comment <- thread.comments) {
 	    	     @if(!comment.image.isEmpty) {
-                    <img src="@Files.img(FilenameUtils.getName(comment.image))">
+                    <img src="@Files.img(FilenameUtils.getName(comment.thumbName))">
                 }
 	    		@Html(comment.text)
 	    	}
