--- a/app/views/board.scala.html
+++ b/app/views/board.scala.html
@@ -14,7 +14,7 @@
 
 	    	@for(comment <- thread.comments) {
 	    	     @if(!comment.image.isEmpty) {
-                    <img src="@Files.img(comment.imgFolder + comment.thumbName)">
+                    <img src="@Files.cache(comment.imgFolder + comment.thumbName)">
                 }
 	    		@Html(comment.text)
 	    	}
