--- a/app/views/board.scala.html
+++ b/app/views/board.scala.html
@@ -1,4 +1,4 @@
-@(threads: List[rovachan.core.Thread])
+@(threads: Seq[rovachan.core.Thread])
 
 @import org.apache.commons.io.FilenameUtils
 @import rovachan.controllers.routes._
